# vsrun

./: Cargo.toml  LICENSE  README.md
docs/: vscode.md
src/: main.rs
tests/: cli.rs
