[package]
name = "vsrun"
version = "0.1.0"
edition = "2021"
authors = ["Simon Anliker <simon@anliker.dev>"]
license = "MIT"
description = "Visual Studio Code run cli that simplifies extension management."
readme = "README.md"
homepage = "https://github.com/anliksim/vsrun"
repository = "https://github.com/anliksim/vsrun"
keywords = ["cli", "vscode"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = { version = "1.0.60", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
assert_fs = "1.0.7"
