[package]
name = "vsrun"
version = "0.2.0"
edition = "2021"
authors = ["Simon Anliker <simon@anliker.dev>"]
license = "MIT"
description = "Visual Studio Code run cli that simplifies extension management."
readme = "README.md"
homepage = "https://github.com/anliksim/vsrun"
repository = "https://github.com/anliksim/vsrun"
keywords = ["cli", "vscode"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
